--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+	<div id="myList">
+		<h1>To Do List</h1>
+  		<ul id="mainList">
+    
+  		</ul>
+	</div>
+	<div id="formBox">
+  		<form action="#" method="GET" id="form">
+    		<label class="tag">This right here needs doin':</br></label>
+    		<input type="text" id="inputText" value="">
+    		<input type="Submit" value="GIT-R-DONE" id="submitBtn">
+  		</form>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
